* Fix problem detected by ucs-lint (Bug #32049)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45264 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/control
+++ b/services/univention-samba/debian/control
@@ -9,7 +9,8 @@ Standards-Version: 3.5.2
 
 Package: univention-samba
 Architecture: all
-Pre-Depends: samba (>= 3.0.20)
+Pre-Depends: samba (>= 3.0.20),
+ univention-config
 Depends: ${misc:Depends},
  univention-config (>= 8.0.2),
  univention-base-files,
