added mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile (Bug #28123)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45319 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-cyrus/conffiles/etc/imapd/imapd.conf
+++ b/mail/univention-mail-cyrus/conffiles/etc/imapd/imapd.conf
@@ -98,9 +98,13 @@ print 'tls_cert_file: %s' % baseConfig.get('mail/cyrus/ssl/certificate', '/var/l
 print 'tls_key_file: %s' % baseConfig.get('mail/cyrus/ssl/key', '/var/lib/cyrus/private.key')
 
 if baseConfig.get("mail/cyrus/murder/master", ""):
-	print 'tls_ca_file: /etc/univention/ssl/ucsCA/CAcert.pem',
+	print 'tls_ca_file: %s' % baseConfig.get('mail/cyrus/ssl/cafile', '/etc/univention/ssl/ucsCA/CAcert.pem')
+	if baseConfig.get('mail/cyrus/ssl/capath'):
+		print 'tls_ca_path: %s' % baseConfig.get('mail/cyrus/ssl/capath')
 else:
-	print 'tls_ca_path: /etc/univention/ssl/ucsCA/certs/',
+	print 'tls_ca_path: %s' % baseConfig.get('mail/cyrus/ssl/capath', '/etc/univention/ssl/ucsCA/certs/')
+	if baseConfig.get('mail/cyrus/ssl/cafile'):
+		print 'tls_ca_file: %s' % baseConfig.get('mail/cyrus/ssl/cafile')
 @!@
 tls_session_timeout: 1440
 tls_cipher_list: TLSv1:SSLv3:SSLv2:!NULL:!EXPORT:!DES:!LOW:@STRENGTH
