--- a/base/univention-ipcalc/debian/rules
+++ b/base/univention-ipcalc/debian/rules
@@ -3,7 +3,7 @@
 # Univention IP Calculator
 #  rules file for the debian package
 #
-# Copyright 2004-2012 Univention GmbH
+# Copyright 2004-2013 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -33,6 +33,7 @@
 override_dh_auto_test:
 	ucslint
 	dh_auto_test
+	python univention/ipcalc.py -v
 
 %:
 	dh $@
