--- a/base/univention-ipcalc/debian/control
+++ b/base/univention-ipcalc/debian/control
@@ -3,7 +3,9 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.2
-Build-Depends: debhelper, ucslint-univention
+Build-Depends: debhelper,
+ ucslint-univention,
+ python-ipaddr
 
 Package: univention-ipcalc
 Architecture: all
