* Bug #32782: fix build process
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45387 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-doc/Makefile
+++ b/management/univention-management-console-frontend-doc/Makefile
@@ -53,7 +53,7 @@ univention-dojo: /usr/share/univention-dojo
 	cp -r /usr/share/univention-dojo $@
 	cp -r /usr/share/univention-management-console-frontend-src/umc $@
 	# workarounds for referenced external modules
-	for imodule in umc/modules/udm/LicenseDialog.js umc/modules/undefined.js https://www.piwik.univention.de/piwik.js.js; do \
+	for imodule in umc/modules/udm/LicenseImportDialog.js umc/modules/udm/LicenseDialog.js umc/modules/undefined.js https://www.piwik.univention.de/piwik.js.js; do \
 		mkdir -p univention-dojo/$${imodule%/*}; \
 		echo 'define([],function(){});' > univention-dojo/$${imodule}; \
 	done
