Bug #28672: add UEFI graphic modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45389 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/boot/grub/grub.cfg
+++ b/base/univention-installer/boot/grub/grub.cfg
@@ -3,6 +3,8 @@ if loadfont /boot/grub/unicode.pf2 ; then
 	insmod gfxterm
 	insmod vbe
 	insmod vga
+	insmod efi_gop
+	insmod efi_uga
 fi
 terminal_output gfxterm
 
