--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -23,7 +23,8 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-univention-lib (>= 1.0.25-1),
  console-tools,
  shell-univention-lib (>= 3.0.1-1),
- python-univention-lib (>= 3.0.1-1)
+ python-univention-lib (>= 3.0.1-1),
+ univention-ipcalc (>= 5),
 Recommends: univention-management-console-module-setup
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
