--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -8,7 +8,14 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-support,
  python-all,
  univention-config-dev,
- univention-management-console-dev
+ univention-management-console-dev,
+ python-apt,
+ python-psutil,
+ python-notifier,
+ python-univention-lib,
+ python-univention-management-console,
+ python-imaging,
+ univention-installer-modules,
 XS-Python-Version: 2.6
 
 Package: univention-system-setup
