Bug #28191: merged UEFI specific code from ucs-3.1/component/uefi/univention-grub
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45483 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/control
+++ b/base/univention-grub/debian/control
@@ -10,7 +10,8 @@ Build-Depends: debhelper,
 Package: univention-grub
 Architecture: all
 Depends: ${misc:Depends},
- grub-pc,
+ grub-pc | grub-efi,
+ efibootmgr,
  initramfs-tools,
  lvm2,
  memtest86+,
