Bug #28191: added dependencies to univention-uefi and univention-uefi-secureboot
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45484 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/control
+++ b/base/univention-grub/debian/control
@@ -10,8 +10,7 @@ Build-Depends: debhelper,
 Package: univention-grub
 Architecture: all
 Depends: ${misc:Depends},
- grub-pc | grub-efi,
- efibootmgr,
+ grub-pc | univention-uefi | univention-uefi-secureboot,
  initramfs-tools,
  lvm2,
  memtest86+,
