Bug #28191: fixed typo in dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45493 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-uefi/debian/control
+++ b/base/univention-uefi/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 8),
  univention-config-dev,
- univention-ucslint
+ ucslint-univention
 Standards-Version: 3.9.4
 
 Package: univention-uefi
