Bug #28191: updated dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45592 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-uefi/debian/control
+++ b/base/univention-uefi/debian/control
@@ -21,7 +21,7 @@ Description: Meta package for UEFI support on UCS Systems
 
 Package: univention-uefi-secureboot
 Architecture: amd64
-Depends: ${misc:Depends}, univention-uefi (= ${source:Version}), shim-signed, grub-signed
+Depends: ${misc:Depends}, univention-uefi (= ${source:Version}), shim-signed, grub-efi-amd64-signed
 Description: Meta package for UEFI SecureBoot support on UCS Systems
  This meta package installs all required packages for UEFI SecureBoot 
  support on an UCS system.
