Bug #32931: Add missing Depends: python-ipaddr
Also use ${python:Depends} to pick-up additional dependencies.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45722 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ipcalc/debian/control
+++ b/base/univention-ipcalc/debian/control
@@ -5,11 +5,12 @@ Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.2
 Build-Depends: debhelper,
  ucslint-univention,
- python-ipaddr
+ python-ipaddr,
 
 Package: univention-ipcalc
 Architecture: all
-Depends: python2.6
+Depends: python-ipaddr,
+ ${python:Depends}
 Description: UCS - ipcalc tool for network
  This package contain the ipcalc tool.
  .
