Bug #31773: ucs-test: disable cron jobs
Disable normal cron jobs on test VMs to prevent concurrent updates

sed -i -e '/updater.identify=/s|$| cron/ucrdisabled=true update/check/cron/enabled=false update/check/boot/enabled=false|' *

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45730 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
@@ -48,7 +48,7 @@ command1:
  chmod +x /etc/network/if-up.d/z_route
  /etc/network/if-up.d/z_route
  sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)"
+ ucr set updater/identify="UCS (EC2 Test)" cron/ucrdisabled=true update/check/cron/enabled=false update/check/boot/enabled=false
 command2:
  resize2fs /dev/xvda1
  ucr set repository/online/server=testing.univention.de
@@ -115,7 +115,7 @@ command1:
  chmod +x /etc/network/if-up.d/z_route
  /etc/network/if-up.d/z_route
  sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)"
+ ucr set updater/identify="UCS (EC2 Test)" cron/ucrdisabled=true update/check/cron/enabled=false update/check/boot/enabled=false
 command2:
  resize2fs /dev/xvda1
  ucr set repository/online/server=testing.univention.de
