* Rename utils lib to utils.sh and add copyright headers(Bug #32798)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45742 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4.cfg
@@ -41,27 +41,27 @@ profile:
  packages_install="univention-s4-connector univention-samba4"
  packages_remove=""
 command1:
- . utils.lib; basic_setup
+ . utils.sh; basic_setup
 command2:
- . utils.lib; upgrade_to_3.2
- . utils.lib; run_setup_join
+ . utils.sh; upgrade_to_3.2
+ . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
- . utils.lib; wait_for_reboot
+ . utils.sh; wait_for_reboot
 command3:
  univention-license-import /root/autotest201.ldif
 command4:
- . utils.lib; switch_to_test_app_center
- . utils.lib; install_apps ucsschool
- . utils.lib; run_join_scripts
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps ucsschool
+ . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 4
 command6:
- . utils.lib; install_ucs_test
- . utils.lib; install_apps_test_packages ucsschool
+ . utils.sh; install_ucs_test
+ . utils.sh; install_apps_test_packages ucsschool
 command7:
  # run tests
- . utils.lib; run_apptests
+ . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:"/var/log/univention/{join,setup,listener}.log" .
