--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -41,26 +41,26 @@ profile:
  packages_install=""
  packages_remove=""
 command1:
- . utils.lib; basic_setup
+ . utils.sh; basic_setup
 command2:
- . utils.lib; upgrade_to_latest_errata
- . utils.lib; run_setup_join
+ . utils.sh; upgrade_to_latest_errata
+ . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest208.ldif
 command4:
- . utils.lib; switch_to_test_app_center
- . utils.lib; install_apps ucsschool
- . utils.lib; run_join_scripts
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps ucsschool
+ . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
  /usr/share/ucs-school-import/scripts/create_ou School1 slave209-1
  /usr/share/ucs-school-import/scripts/create_ou School2 slave209-2
 command6:
- . utils.lib; upgrade_to_3.2
- . utils.lib; run_join_scripts
+ . utils.sh; upgrade_to_3.2
+ . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
- . utils.lib; wait_for_reboot
+ . utils.sh; wait_for_reboot
 command7:
  #
 command8:
@@ -84,22 +84,22 @@ profile:
  packages_remove=""
  nameserver=[master209_IP]
 command1:
- . utils.lib; basic_setup
+ . utils.sh; basic_setup
 command2:
- . utils.lib; upgrade_to_latest_errata
+ . utils.sh; upgrade_to_latest_errata
 command3:
- . utils.lib; run_setup_join_on_non_master
+ . utils.sh; run_setup_join_on_non_master
 command4:
- . utils.lib; switch_to_test_app_center
- . utils.lib; install_apps ucsschool
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps ucsschool
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4
 command6:
- . utils.lib; upgrade_to_3.2
- . utils.lib; run_join_scripts
+ . utils.sh; upgrade_to_3.2
+ . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
- . utils.lib; wait_for_reboot
+ . utils.sh; wait_for_reboot
 command7:
  # None
 command8:
@@ -122,29 +122,29 @@ profile:
  packages_remove=""
  nameserver=[master209_IP]
 command1:
- . utils.lib; basic_setup
+ . utils.sh; basic_setup
 command2:
- . utils.lib; upgrade_to_latest_errata
+ . utils.sh; upgrade_to_latest_errata
 command3:
- . utils.lib; run_setup_join_on_non_master
+ . utils.sh; run_setup_join_on_non_master
 command4:
- . utils.lib; switch_to_test_app_center
- . utils.lib; install_apps ucsschool
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
  /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4
 command6:
- . utils.lib; upgrade_to_3.2
- . utils.lib; run_join_scripts
+ . utils.sh; upgrade_to_3.2
+ . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
- . utils.lib; wait_for_reboot
+ . utils.sh; wait_for_reboot
 command7:
- . utils.lib; install_ucs_test
- . utils.lib; install_apps_test_packages ucsschool
+ . utils.sh; install_ucs_test
+ . utils.sh; install_apps_test_packages ucsschool
 command8:
  # run tests
- . utils.lib; run_apptests
+ . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
