--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -45,7 +45,7 @@ command1:
  chmod +x /etc/network/if-up.d/z_route
  /etc/network/if-up.d/z_route
  sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" cron/ucrdisabled=true update/check/cron/enabled=false update/check/boot/enabled=false
+ ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
 command2:
  ucr set repository/online/server=testing.univention.de
  univention-upgrade --noninteractive --ignoreterm --ignoressh
