Rename utils lib to utils.sh (Bug #32798)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45746 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
@@ -72,5 +72,5 @@ command8:
 files:
  ~/ec2/license/autotest200.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
