--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -65,7 +65,7 @@ command8:
 files:
  ~/ec2/license/autotest202.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave202-1]
 profile:
@@ -103,7 +103,7 @@ command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave202-2]
 profile:
@@ -146,4 +146,4 @@ command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
