--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
@@ -67,7 +67,7 @@ command8:
 files:
  ~/ec2/license/autotest204.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave204-1]
 profile:
@@ -103,7 +103,7 @@ command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave204-2]
 profile:
@@ -146,4 +146,4 @@ command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
