--- a/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
@@ -75,5 +75,5 @@ command9:
 files:
  ~/ec2/license/autotest206.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
