--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -70,7 +70,7 @@ command9:
 files:
  ~/ec2/license/autotest209.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave209-1]
 profile:
@@ -108,7 +108,7 @@ command9:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave209-2]
 profile:
@@ -154,4 +154,4 @@ command9:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
