--- a/test/ucs-ec2-tools/examples/jenkins/autotest-208-ucsschool-update-3.1-to-3.2-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-208-ucsschool-update-3.1-to-3.2-multiserver-s4.cfg
@@ -70,7 +70,7 @@ command9:
 files:
  ~/ec2/license/autotest208.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave208-1]
 profile:
@@ -108,7 +108,7 @@ command9:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave208-2]
 profile:
@@ -154,4 +154,4 @@ command9:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.lib /root/
+ examples/jenkins/utils/utils.sh /root/
