--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -65,6 +65,7 @@ Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
  python-univention-config-registry,
  python-univention-lib (>= 1.0.80),
+ python-univention-directory-manager (>=9.0.75-1),
  univention-join,
  python-univention,
  python-pyopenssl,
