* Add versioned dependency on univention-ldap-server to ensure   that the new LDAP schema objectclass used by settings/udmmodule etc.   is available at the time umc-module-appcenter calls the module in it's   postinst/joinscript (Bug #32409).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45777 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/control
+++ b/management/univention-directory-manager-modules/debian/control
@@ -20,7 +20,8 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-smbpasswd,
  shell-univention-lib,
  python-univention-lib (>= 3.0.25-5),
- python-univention-directory-manager-cli (= ${binary:Version})
+ python-univention-directory-manager-cli (= ${binary:Version}),
+ univention-ldap-server (>=10.0.17-4) | univention-server-member | univention-basesystem
 Provides: ${python:Provides}
 Replaces: python-univention-lib (<< 1.0.15-1)
 Description: UCS - Modules for administration tools
