* generalize the versioned dependency of shell-univention-lib on   python-univention-lib (Bug #32409)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45778 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -28,7 +28,7 @@ Package: shell-univention-lib
 Architecture: all
 Depends: ${misc:Depends},
  python-univention-config-registry (>= 8.0.2-1),
- python-univention-lib (>= 3.0.12-4),
+ python-univention-lib (= ${binary:Version}),
  pwgen
 Description: UCS - common scripting functions for shell scripts
  This package contains shell functions used by various
