Bug #28191: disable chainloading during UEFI boot
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45874 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/boot/grub/grub.cfg
+++ b/base/univention-installer/boot/grub/grub.cfg
@@ -30,8 +30,10 @@ menuentry 'Additional options' {
 	configfile /boot/grub/grub-kernel.cfg
 }
 
-menuentry 'Boot from first harddisk partition' {
-	insmod chain
-	set root=(hd0)
-	chainloader +1
-}
+if [ "${grub_platform}" == "pc" ]; then
+	menuentry 'Boot from first harddisk partition' {
+		insmod chain
+		set root=(hd0)
+		chainloader +1
+	}
+fi
