Bug #28191: added special chainloading target for UEFI
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45895 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/boot/grub/grub.cfg
+++ b/base/univention-installer/boot/grub/grub.cfg
@@ -37,3 +37,12 @@ if [ "${grub_platform}" == "pc" ]; then
 		chainloader +1
 	}
 fi
+if [ "${grub_platform}" == "efi" ]; then
+	search --file --no-floppy "/EFI/univention/grubx64.efi"
+	if [ "$?" = "0" ] ; then
+		menuentry 'Boot from first harddisk partition' {
+			search --file --no-floppy "/EFI/univention/grubx64.efi" --set=root
+			configfile /grub.cfg
+		}
+	fi
+fi
