Various updates for UCS@school jenkins jobs (Bug #32798)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46085 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -67,9 +67,9 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave202-1]
+[slave2021]
 profile:
- hostname=slave202-1
+ hostname=slave2021
  domainname=autotest202.local
  windows/domain=AUTOTEST202
  server/role="domaincontroller_slave"
@@ -93,8 +93,6 @@ command4:
 command5:
  echo -n "univention" >/tmp/univention
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3
- /usr/share/ucs-school-import/scripts/create_ou School1 slave202-1
- /usr/share/ucs-school-import/scripts/create_ou School2 slave202-2
 command6:
  # None
 command7:
@@ -105,9 +103,9 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave202-2]
+[slave2022]
 profile:
- hostname=slave202-2
+ hostname=slave2022
  domainname=autotest202.local
  windows/domain=AUTOTEST202
  server/role="domaincontroller_slave"
@@ -137,11 +135,11 @@ command6:
 command7:
  # run tests
  . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave202-2_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave202-2_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave202-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave202-2_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave202-2_IP]:/var/log/samba/* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:ucs-test.log .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:test-reports .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:/var/log/univention/connector* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:/var/log/samba/* .
 command8:
  halt -p
 files:
