--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
@@ -56,8 +56,6 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
- /usr/share/ucs-school-import/scripts/create_ou School1 slave203-1
- /usr/share/ucs-school-import/scripts/create_ou School2 slave203-2
 command6:
  #
 command7:
@@ -69,15 +67,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave203-1]
+[slave2031]
 profile:
- hostname=slave203-1
+ hostname=slave2031
  domainname=autotest203.local
  windows/domain=AUTOTEST203
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master203_IP]
 command1:
@@ -105,15 +103,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave203-2]
+[slave2032]
 profile:
- hostname=slave203-2
+ hostname=slave2032
  domainname=autotest203.local
  windows/domain=AUTOTEST203
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master203_IP]
 command1:
@@ -137,11 +135,11 @@ command6:
 command7:
  # run tests
  . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave203-2_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave203-2_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave203-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave203-2_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave203-2_IP]:/var/log/samba/* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2032_IP]:ucs-test.log .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2032_IP]:test-reports .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2032_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2032_IP]:/var/log/univention/connector* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2032_IP]:/var/log/samba/* .
 command8:
  halt -p
 files:
