--- a/test/ucs-ec2-tools/examples/jenkins/autotest-205-ucsschool-update-3.1-to-3.2-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-205-ucsschool-update-3.1-to-3.2-singleserver-s3.cfg
@@ -55,7 +55,7 @@ command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 3
 command6:
  . utils.sh; upgrade_to_3.2
- . utils.sh; run_setup_join
+ . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
  . utils.sh; wait_for_reboot
