--- a/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
@@ -53,8 +53,6 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
- /usr/share/ucs-school-import/scripts/create_ou School1 slave207-1
- /usr/share/ucs-school-import/scripts/create_ou School2 slave207-2
 command6:
  . utils.sh; upgrade_to_3.2
  . utils.sh; run_join_scripts
@@ -72,9 +70,9 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave207-1]
+[slave2071]
 profile:
- hostname=slave207-1
+ hostname=slave2071
  domainname=autotest207.local
  windows/domain=AUTOTEST207
  server/role="domaincontroller_slave"
@@ -110,9 +108,9 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave207-2]
+[slave2072]
 profile:
- hostname=slave207-2
+ hostname=slave2072
  domainname=autotest207.local
  windows/domain=AUTOTEST207
  server/role="domaincontroller_slave"
@@ -145,11 +143,11 @@ command7:
 command8:
  # run tests
  . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave207-2_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave207-2_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave207-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave207-2_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave207-2_IP]:/var/log/samba/* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2072_IP]:ucs-test.log .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2072_IP]:test-reports .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave20207P]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2072_IP]:/var/log/univention/connector* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2072_IP]:/var/log/samba/* .
 command9:
  halt -p
 files:
