--- a/test/ucs-ec2-tools/examples/jenkins/autotest-208-ucsschool-update-3.1-to-3.2-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-208-ucsschool-update-3.1-to-3.2-multiserver-s4.cfg
@@ -53,8 +53,6 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
- /usr/share/ucs-school-import/scripts/create_ou School1 slave208-1
- /usr/share/ucs-school-import/scripts/create_ou School2 slave208-2
 command6:
  . utils.sh; upgrade_to_3.2
  . utils.sh; run_join_scripts
@@ -72,15 +70,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave208-1]
+[slave2081]
 profile:
- hostname=slave208-1
+ hostname=slave2081
  domainname=autotest208.local
  windows/domain=AUTOTEST208
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master208_IP]
 command1:
@@ -110,15 +108,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave208-2]
+[slave2082]
 profile:
- hostname=slave208-2
+ hostname=slave2082
  domainname=autotest208.local
  windows/domain=AUTOTEST208
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master208_IP]
 command1:
@@ -145,11 +143,11 @@ command7:
 command8:
  # run tests
  . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave208-2_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave208-2_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave208-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave208-2_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave208-2_IP]:/var/log/samba/* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2082_IP]:ucs-test.log .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2082_IP]:test-reports .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2082_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2082_IP]:/var/log/univention/connector* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2082_IP]:/var/log/samba/* .
 command9:
  halt -p
 files:
