--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -46,15 +46,13 @@ command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
- univention-license-import /root/autotest208.ldif
+ univention-license-import /root/autotest209.ldif
 command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
- /usr/share/ucs-school-import/scripts/create_ou School1 slave209-1
- /usr/share/ucs-school-import/scripts/create_ou School2 slave209-2
 command6:
  . utils.sh; upgrade_to_3.2
  . utils.sh; run_join_scripts
@@ -72,15 +70,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave209-1]
+[slave2091]
 profile:
- hostname=slave209-1
+ hostname=slave2091
  domainname=autotest209.local
  windows/domain=AUTOTEST209
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master209_IP]
 command1:
@@ -110,15 +108,15 @@ files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
 
-[slave209-2]
+[slave2092]
 profile:
- hostname=slave209-2
+ hostname=slave2092
  domainname=autotest209.local
  windows/domain=AUTOTEST209
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4"
+ packages_install="univention-samba4"
  packages_remove=""
  nameserver=[master209_IP]
 command1:
@@ -145,11 +143,11 @@ command7:
 command8:
  # run tests
  . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave209-2_IP]:/var/log/samba/* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:ucs-test.log .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:test-reports .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:/var/log/univention/connector* .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:/var/log/samba/* .
 command9:
  halt -p
 files:
