--- a/doc/errata/2013-11-20-univention-management-console-module-udm.yaml
+++ b/doc/errata/2013-11-20-univention-management-console-module-udm.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-module-udm
-fix: 4.0.97-2.418.201311201441
+fix: 4.0.97-3.419.201311211107
 note:
 version: [0]
 desc: |
   This errata update fixes several issues:
   * After cancelling the creation of an LDAP object it may have been impossible
     to open an existing object.
-bug: [33244]
+  * Deleting a container from the LDAP tree in the LDAP directory failed when
+    this container was selected.
+bug: [33244, 33343]
