* Bug #30803: added test data including user photos * Bug #33083: added test data, added dependency to nagios
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46211 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/control
+++ b/test/univention-demo-configuration/debian/control
@@ -10,4 +10,5 @@ Build-Depends: debhelper (>= 7.0.50~),
 Package: univention-demo-configuration
 Architecture: all
 Description: restricted configuration for demo.univention.de
-Depends: univention-config | ${misc:Depends}
+Depends: univention-config | ${misc:Depends},
+ univention-nagios-server
