--- a/doc/errata/2013-11-21-firefox-de.yaml
+++ b/doc/errata/2013-11-21-firefox-de.yaml
@@ -22,4 +22,24 @@ desc: |
  * Security bypass of PDF.js checks using iframes (CVE-2013-5598)
  * Writing to cycle collected object during image decoding (CVE-2013-5596)
  * Spoofing addressbar though SELECT element (CVE-2013-5593)
-ref: CVE-2013-1739,CVE-2013-1741,CVE-2013-2566,CVE-2013-5590,CVE-2013-5591,CVE-2013-5592,CVE-2013-5593,CVE-2013-5595,CVE-2013-5596,CVE-2013-5597,CVE-2013-5598,CVE-2013-5599,CVE-2013-5600,CVE-2013-5601,CVE-2013-5602,CVE-2013-5603,CVE-2013-5604,CVE-2013-5605,CVE-2013-5606,CVE-2013-5607
+cve:
+ - CVE-2013-1739
+ - CVE-2013-1741
+ - CVE-2013-2566
+ - CVE-2013-5590
+ - CVE-2013-5591
+ - CVE-2013-5592
+ - CVE-2013-5593
+ - CVE-2013-5595
+ - CVE-2013-5596
+ - CVE-2013-5597
+ - CVE-2013-5598
+ - CVE-2013-5599
+ - CVE-2013-5600
+ - CVE-2013-5601
+ - CVE-2013-5602
+ - CVE-2013-5603
+ - CVE-2013-5604
+ - CVE-2013-5605
+ - CVE-2013-5606
+ - CVE-2013-5607
